--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,10 +13,14 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	<ul class="navbar-nav mr-auto">
-	  {%- for i in (0..2) -%}
+	  <li class="nav-item">
+	    <a class="nav-link" href="https://forms.gle/Ujck8YCb7VcsUhPX8">Registration</a>
+	  </li>
+
+	  {%- for i in (1..2) -%}
 	  <li class="nav-item">
 	    <a class="nav-link{% if page.url contains nodes[i] %} active{% endif %}"
-	       href="{{ site.baseurl }}/{{nodes[i]}}/">{{title[i]}}</a>
+	       href="{{ site.baseurl }}/M2Week/{{nodes[i]}}/">{{title[i]}}</a>
 	  </li>
 	  {%- endfor %}
 
